CREATE TABLE academic_years (end_date date, start_date date, code varchar(255) UNIQUE, id varchar(255) NOT NULL, name varchar(255), status varchar(255), PRIMARY KEY (id));
CREATE TABLE announcements (created_at timestamp(6) with time zone, body varchar(4000), audience varchar(255), created_by varchar(255), id varchar(255) NOT NULL, title varchar(255), PRIMARY KEY (id));
CREATE TABLE assignment_submissions (score float(53), graded_at timestamp(6) with time zone, submitted_at timestamp(6) with time zone, feedback varchar(2000), content varchar(4000), assignment_id varchar(255), attachment_name varchar(255), graded_by varchar(255), id varchar(255) NOT NULL, status varchar(255), student_id varchar(255), student_name varchar(255), PRIMARY KEY (id));
CREATE TABLE assignments (allow_late boolean NOT NULL, created_at timestamp(6) with time zone, deadline timestamp(6) with time zone, description varchar(4000), attachment_name varchar(255), class_id varchar(255), id varchar(255) NOT NULL, status varchar(255), subject_id varchar(255), subject_name varchar(255), teacher_id varchar(255), teacher_name varchar(255), title varchar(255), PRIMARY KEY (id));
CREATE TABLE attendance_records (date date, period_no integer, class_id varchar(255), id varchar(255) NOT NULL, note varchar(255), slot_id varchar(255), status varchar(255), student_id varchar(255), subject_name varchar(255), PRIMARY KEY (id));
CREATE TABLE audit_logs (created_at timestamp(6) with time zone, detail varchar(1000), action varchar(255), actor_id varchar(255), actor_name varchar(255), entity_id varchar(255), entity_type varchar(255), id varchar(255) NOT NULL, module varchar(255), role varchar(255), PRIMARY KEY (id));
CREATE TABLE chat_messages (read_flag boolean NOT NULL, created_at timestamp(6) with time zone, body varchar(2000), id varchar(255) NOT NULL, recipient_id varchar(255), recipient_name varchar(255), sender_id varchar(255), sender_name varchar(255), PRIMARY KEY (id));
CREATE TABLE classes (student_count integer NOT NULL, academic_year_id varchar(255), code varchar(255) UNIQUE, grade_level varchar(255), homeroom_teacher_id varchar(255), id varchar(255) NOT NULL, name varchar(255), PRIMARY KEY (id));
CREATE TABLE club_registrations (registered_at timestamp(6) with time zone, club_id varchar(255), club_name varchar(255), id varchar(255) NOT NULL, registered_by varchar(255), status varchar(255), student_id varchar(255), student_name varchar(255), PRIMARY KEY (id));
CREATE TABLE clubs (capacity integer NOT NULL, created_at timestamp(6) with time zone, fee bigint NOT NULL, description varchar(2000), id varchar(255) NOT NULL, name varchar(255), schedule varchar(255), status varchar(255), PRIMARY KEY (id));
CREATE TABLE exam_categories (weight float(53) NOT NULL, code varchar(255) UNIQUE, id varchar(255) NOT NULL, name varchar(255), PRIMARY KEY (id));
CREATE TABLE fee_period_items (amount bigint NOT NULL, fee_period_id varchar(255), grade_level varchar(255), id varchar(255) NOT NULL, name varchar(255), PRIMARY KEY (id));
CREATE TABLE fee_periods (due_date date, created_at timestamp(6) with time zone, academic_year_id varchar(255), apply_to_grades varchar(255), code varchar(255), id varchar(255) NOT NULL, name varchar(255), status varchar(255), PRIMARY KEY (id));
CREATE TABLE grade_change_logs (new_score float(53), old_score float(53), changed_at timestamp(6) with time zone, changed_by varchar(255), grade_id varchar(255), id varchar(255) NOT NULL, new_note varchar(255), old_note varchar(255), reason varchar(255), PRIMARY KEY (id));
CREATE TABLE grades (score float(53), recorded_at timestamp(6) with time zone, category varchar(255), category_name varchar(255), id varchar(255) NOT NULL, note varchar(255), semester_id varchar(255), student_id varchar(255), subject_id varchar(255), subject_name varchar(255), PRIMARY KEY (id));
CREATE TABLE invoice_items (amount bigint NOT NULL, id varchar(255) NOT NULL, invoice_id varchar(255), name varchar(255), PRIMARY KEY (id));
CREATE TABLE invoices (due_date date, issued_at timestamp(6) with time zone, paid_amount bigint NOT NULL, total_amount bigint NOT NULL, code varchar(255), fee_period_id varchar(255), id varchar(255) NOT NULL, parent_id varchar(255), status varchar(255), student_id varchar(255), student_name varchar(255), PRIMARY KEY (id));
CREATE TABLE notification_templates (active boolean NOT NULL, body_template varchar(2000), channel varchar(255), code varchar(255) UNIQUE, id varchar(255) NOT NULL, name varchar(255), title_template varchar(255), PRIMARY KEY (id));
CREATE TABLE notifications (read boolean NOT NULL, created_at timestamp(6) with time zone, body varchar(2000), id varchar(255) NOT NULL, recipient_id varchar(255), ref_id varchar(255), ref_type varchar(255), title varchar(255), type varchar(255), PRIMARY KEY (id));
CREATE TABLE parent_student (primary_contact boolean NOT NULL, id varchar(255) NOT NULL, parent_id varchar(255) NOT NULL, student_id varchar(255) NOT NULL, PRIMARY KEY (id), UNIQUE (parent_id, student_id));
CREATE TABLE password_reset_tokens (expires_at timestamp(6) with time zone NOT NULL, used_at timestamp(6) with time zone, id varchar(255) NOT NULL, token_hash varchar(255) NOT NULL, user_id varchar(255) NOT NULL, PRIMARY KEY (id));
CREATE TABLE refresh_tokens (created_at timestamp(6) with time zone NOT NULL, expires_at timestamp(6) with time zone NOT NULL, revoked_at timestamp(6) with time zone, id varchar(255) NOT NULL, token_hash varchar(64) NOT NULL UNIQUE, user_id varchar(255) NOT NULL, PRIMARY KEY (id));
CREATE TABLE payments (amount bigint NOT NULL, created_at timestamp(6) with time zone, paid_at timestamp(6) with time zone, id varchar(255) NOT NULL, invoice_id varchar(255), method varchar(255), status varchar(255), txn_ref varchar(255), PRIMARY KEY (id));
CREATE TABLE rooms (capacity integer, code varchar(255) UNIQUE, id varchar(255) NOT NULL, name varchar(255), PRIMARY KEY (id));
CREATE TABLE school_holidays (date date, description varchar(255), id varchar(255) NOT NULL, name varchar(255), PRIMARY KEY (id));
CREATE TABLE stored_files (size_bytes bigint NOT NULL, created_at timestamp(6) with time zone NOT NULL, content_type varchar(255), id varchar(255) NOT NULL, original_name varchar(255) NOT NULL, storage_name varchar(255) NOT NULL UNIQUE, uploaded_by varchar(255) NOT NULL, PRIMARY KEY (id));
CREATE TABLE semesters (end_date date, sequence integer NOT NULL, start_date date, academic_year_id varchar(255), code varchar(255), id varchar(255) NOT NULL, name varchar(255), status varchar(255), PRIMARY KEY (id));
CREATE TABLE subjects (code varchar(255) UNIQUE, id varchar(255) NOT NULL, name varchar(255), PRIMARY KEY (id));
CREATE TABLE timetable_slots (period_no integer NOT NULL, class_id varchar(255), day_of_week varchar(255), end_time varchar(255), id varchar(255) NOT NULL, room_code varchar(255), semester_id varchar(255), start_time varchar(255), subject_id varchar(255), subject_name varchar(255), teacher_id varchar(255), teacher_name varchar(255), PRIMARY KEY (id));
CREATE TABLE users (created_at timestamp(6) with time zone, avatar_url varchar(255), class_id varchar(255), class_name varchar(255), email varchar(255), full_name varchar(255), id varchar(255) NOT NULL, main_subject varchar(255), password_hash varchar(255) NOT NULL, phone varchar(255), role varchar(255) NOT NULL, status varchar(255) NOT NULL, student_code varchar(255), teacher_code varchar(255), username varchar(255) NOT NULL UNIQUE, PRIMARY KEY (id));

CREATE INDEX idx_sub_asg ON assignment_submissions (assignment_id);
CREATE INDEX idx_sub_student ON assignment_submissions (student_id);
CREATE INDEX idx_asg_class ON assignments (class_id);
CREATE INDEX idx_asg_teacher ON assignments (teacher_id);
CREATE INDEX idx_att_student ON attendance_records (student_id);
CREATE INDEX idx_att_class_date ON attendance_records (class_id, date);
CREATE INDEX idx_audit_module ON audit_logs (module);
CREATE INDEX idx_audit_actor ON audit_logs (actor_id);
CREATE INDEX idx_chat_sender ON chat_messages (sender_id);
CREATE INDEX idx_chat_recipient ON chat_messages (recipient_id);
CREATE INDEX idx_reg_club ON club_registrations (club_id);
CREATE INDEX idx_reg_student ON club_registrations (student_id);
CREATE INDEX idx_gcl_grade ON grade_change_logs (grade_id);
CREATE INDEX idx_grade_student ON grades (student_id);
CREATE INDEX idx_grade_subject_sem ON grades (subject_id, semester_id);
CREATE INDEX idx_inv_student ON invoices (student_id);
CREATE INDEX idx_inv_parent ON invoices (parent_id);
CREATE INDEX idx_noti_recipient ON notifications (recipient_id);
CREATE INDEX idx_pay_invoice ON payments (invoice_id);
CREATE INDEX idx_refresh_user ON refresh_tokens (user_id);
CREATE INDEX idx_tt_class ON timetable_slots (class_id);
CREATE INDEX idx_file_uploader ON stored_files (uploaded_by);
CREATE INDEX idx_tt_teacher ON timetable_slots (teacher_id);
CREATE INDEX idx_users_role ON users (role);
CREATE INDEX idx_users_class ON users (class_id);
